Test/errors/err_lock_unprotected_read.cb
// Accessing a guarded field without holding the required lock.

import "mutex.cb";

struct Counter {
    mutex mtx = default;
    lock(mtx) {
        int value = default;
    }
};

expect_error("Field 'value' is guarded by 'mtx'") {
    void test() {
        Counter c;
        int v = c.value;
    }
}
